<resources>
    <string name="app_name">智能化母猪养殖管控终端</string>
    <string name="home_tv">主页</string>
    <string name="shopping_tv">机构控制</string>
    <string name="show_tv">联系我们</string>
    <string name="style_tv">视频监控</string>
    <string name="picture_tv">历史曲线</string>
    <string name="board_tv">空调控制</string>
    <string name="index_looks_tv">             温度/Temperature</string>
    <string name="index_looks_info_tv">实时温度信息</string>
    <string name="index_shopping_tv">湿度/Humidity</string>
    <string name="index_shopping_info_tv">空气湿度</string>
    <string name="index_show_tv">二氧化碳浓度/CO2</string>
    <string name="index_show_info_tv">空气中CO2浓度</string>
    <string name="index_search_tv">光照强度/Light Intensity</string>
    <string name="index_search_info_tv">当前光照强度</string>
    <string name="index_anqi_tv">氨气浓度/NH3</string>
    <string name="index_anqi_info_tv">当前氨气浓度</string>
    <string name="index_H2S_tv">硫化氢浓度/H2S</string>
    <string name="index_H2S_info_tv">当前硫化氢浓度</string>
    <string name="index_airrate_tv">空气流速/AirRate</string>
    <string name="index_airrate_info_tv">实时空气流速</string>
    <string name="index_browse_tv">综合信息查询/Search</string>
    <string name="index_browse_info_tv">查询温室历史参数</string>

    <string name="login_name">用户登录</string>
    <string name="login_tv">登录</string>
    <string name="regist_tv">注册</string>
    <string name="strInputAccHint">UserName</string>
    <string name="strInputAccpp">Password</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="opt_remember">记住密码</string>
    <string name="login">登 录</string>
    <string name="opt_autologin">自动登录</string>
    <string name="quit">退  出 </string>
</resources>
